fixed popup form size on smaller screens

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -5,3 +5,15 @@
     background-color: white;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 500px) {
+    .popup__container {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .popup__container {
+        width: 270px;
+    }
+}
